# XKSimulator

./: .gitignore  CMakeLists.txt  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.cpp  serial.h  travelline.cpp  travelline.h  version.h.in  xksimulator.qrc
nmealib/: generate.c  parser.c
qextserialport/: CMakeLists.txt  qextserialenumerator_win.cpp  qextserialport.h  qextserialport_global.h  win_qextserialport.cpp
